# math-bot

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt  setup.sh
core/: evaluator.py  exceptions.py  parser.py  tokenizer.py
tests/: test_evaluator.py  test_exceptions.py  test_parser.py  test_tokenizer.py
