[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "math-bot"
version = "0.1.0"
description = "Математический бот с калькулятором для Telegram, VK Max и Web"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.10.0",
    "python-telegram-bot>=21.0",
    "vkbottle>=4.3",
    "supabase>=2.3",
    "structlog>=24.1",
    "httpx>=0.27.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "mypy>=1.11.0",
    "black>=24.0",
    "flake8>=7.0",
]

[tool.setuptools.packages.find]
include = ["core*", "interfaces*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests/"]

[tool.black]
line-length = 100
target-version = ["py311"]
